--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "serve": "gatsby serve",
     "presite": "cross-env NODE_OPTIONS=--max-old-space-size=4096 npm run build",
     "site": "npm run gh-pages",
+    "patch": "yarn version --patch && git push origin master && git push origin --tags",
+    "minor": "yarn version --minor && git push origin master && git push origin --tags",
+    "major": "yarn version --major && git push origin master && git push origin --tags",
     "start": "gatsby develop",
     "test": "npm run lint"
   },
