--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@umijs/fabric": "^2.0.2",
+    "@umijs/plugin-qiankun": "1.4.0",
     "babel-plugin-import": "^1.12.0",
     "check-prettier": "^1.0.3",
     "cross-env": "^6.0.3",
