--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "homepage": "https://github.com/wetrial/wetrial-doc",
   "scripts": {
     "start": "npm run dev",
-    "dev": "cross-env REACT_APP_ENV=dev father-doc dev",
-    "build:doc": "father-doc build",
+    "dev": "dumi dev",
+    "build:doc": "dumi build",
     "patch": "yarn version --patch && git push origin master && git push origin --tags",
     "minor": "yarn version --minor && git push origin master && git push origin --tags",
     "major": "yarn version --major && git push origin master && git push origin --tags",
@@ -31,10 +31,10 @@
     "prettier": "prettier -c --write \"**/*\""
   },
   "dependencies": {
-    "@ant-design/icons": "^4.0.0-alpha.19",
-    "antd": "^4.0.0-rc.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@ant-design/icons": "^4.0.2",
+    "antd": "^4.0.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "peerDependencies": {
     "@ant-design/icons": "*",
@@ -43,38 +43,38 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@umijs/fabric": "^2.0.2",
-    "@umijs/plugin-qiankun": "1.4.0",
-    "babel-plugin-import": "^1.12.0",
+    "@types/jest": "^25.1.3",
+    "@umijs/fabric": "^2.0.3",
     "check-prettier": "^1.0.3",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.1",
     "del": "^5.1.0",
-    "father-doc": "^1.0.0-beta.5",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.7",
+    "dumi": "^1.0.1",
+    "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.5",
-    "umi": "^2.13.3"
+    "typescript": "^3.8.3",
+    "umi": "^3.0.4",
+    "yorkie": "^2.0.0"
   },
   "engines": {
     "node": ">=10.0.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged"
-    }
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "**/*.less": "stylelint --syntax less",
-    "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "prettier --write"
+    "*.{js,jsx,less,md,json}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write",
+      "git add"
     ]
   },
   "checkFiles": [
     "src/**/*.js*",
-    "src/**/*.ts*"
+    "src/**/*.ts*",
+    "src/**/*.md"
   ],
   "license": "MIT"
 }
