--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.3",
     "@umijs/fabric": "^2.0.3",
+    "@umijs/plugin-qiankun": "^2.0.5",
     "check-prettier": "^1.0.3",
     "cross-env": "^7.0.1",
     "del": "^5.1.0",
