--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "prettier": "prettier -c --write \"**/*\""
   },
   "dependencies": {
-    "@ant-design/icons": "^4.0.2",
-    "antd": "^4.0.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "@ant-design/icons": "^4.2.1",
+    "antd": "^4.3.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "peerDependencies": {
     "@ant-design/icons": "*",
@@ -43,21 +43,21 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.3",
-    "@umijs/fabric": "^2.0.3",
-    "@umijs/plugin-qiankun": "^2.0.5",
+    "@types/jest": "^26.0.0",
+    "@umijs/fabric": "^2.1.0",
+    "@umijs/preset-react": "^1.5.6",
     "check-prettier": "^1.0.3",
-    "cross-env": "^7.0.1",
+    "cross-env": "^7.0.2",
     "del": "^5.1.0",
-    "dumi": "^1.0.1",
-    "lint-staged": "^10.0.8",
-    "prettier": "^1.19.1",
-    "typescript": "^3.8.3",
-    "umi": "^3.0.4",
+    "dumi": "^1.0.31",
+    "lint-staged": "^10.2.9",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5",
+    "umi": "^3.2.3",
     "yorkie": "^2.0.0"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12.16.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
