--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "noImplicitAny": false,
-    "rootDir": "src"
+    "noImplicitAny": false
   },
   "exclude": ["node_modules", "lib", "es", "dist", "**/__tests__", "**/__test__", "**/demo"]
 }
